Added std properly

--- a/prediction_homework.ipynb
+++ b/prediction_homework.ipynb
@@ -58,9 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Amount of columns: 19\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -71,7 +79,7 @@
     "# Download and read February data\n",
     "url_feb = 'https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2023-02.parquet'\n",
     "df_val = pd.read_parquet(url_feb)\n",
-    "\n",
+    "print(f\"Amount of columns: {len(df_train.columns)}\")\n",
     "\n",
     "len(df_train), len(df_val)\n",
     "categorical = ['PULocationID', 'DOLocationID']\n"
@@ -79,13 +87,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_duration_column(df, categorical):\n",
     "    df['duration'] = df.tpep_dropoff_datetime - df.tpep_pickup_datetime\n",
     "    df.duration = df.duration.apply(lambda td: td.total_seconds() / 60)\n",
+    "    print(f\"Standard deviation for dataset: {df['duration'].std()}\")\n",
+    "\n",
     "    # Dropping outliers\n",
     "    before_outliers_dropped = len(df)\n",
     "\n",
@@ -95,13 +105,13 @@
     "    percentage_left = fraction_left * 100\n",
     "    print(f\"Percentage of records left: {percentage_left}%\")\n",
     "    df[categorical] = df[categorical].astype(str)\n",
-    "    print(f\"Standard deviation for dataset: {df['duration'].std()}\")\n",
+    "\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -109,6 +119,7 @@
      "output_type": "stream",
      "text": [
       "Jan:\n",
+      "Standard deviation for dataset: 42.59435124195458\n",
       "Percentage of records left: 98.1220282212598%\n"
      ]
     },
@@ -116,7 +127,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/7q/237gyf_x4yx4bblxcc0y91940000gp/T/ipykernel_78592/2607737783.py:12: SettingWithCopyWarning: \n",
+      "/var/folders/7q/237gyf_x4yx4bblxcc0y91940000gp/T/ipykernel_78592/4026087725.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -128,17 +139,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Standard deviation for dataset: 9.939385620151036\n",
       "Feb:\n",
-      "Percentage of records left: 98.00944077722545%\n",
-      "Standard deviation for dataset: 10.064227216640147\n"
+      "Standard deviation for dataset: 42.84210176105113\n",
+      "Percentage of records left: 98.00944077722545%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/7q/237gyf_x4yx4bblxcc0y91940000gp/T/ipykernel_78592/2607737783.py:12: SettingWithCopyWarning: \n",
+      "/var/folders/7q/237gyf_x4yx4bblxcc0y91940000gp/T/ipykernel_78592/4026087725.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -213,11 +223,13 @@
     "lr.fit(X_train, y_train)\n",
     "\n",
     "y_train_pred = lr.predict(X_train)\n",
-    "print(f\"RMSE for training: {mean_squared_error(y_train, y_train_pred, squared=False)}\")\n",
+    "rmse_train = mean_squared_error(y_train, y_train_pred, squared=False)\n",
+    "print(f\"RMSE for training: {rmse_train}\")\n",
     "\n",
     "\n",
     "y_val_pred = lr.predict(X_val)\n",
-    "print(f\"RMSE for validation: {mean_squared_error(y_val, y_val_pred, squared=False)}\")\n"
+    "rmse_val = mean_squared_error(y_val, y_val_pred, squared=False)\n",
+    "print(f\"RMSE for validation: {rmse_val}\")}\")\n"
    ]
   },
   {
